--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,1 +1,8 @@
-<h1 id="header-title">Welcome to Blocipedia!</h1>
+<div class="container">
+  <div class="jumbotron">
+    <h1 id="header-title">Blocipedia</h1>
+
+    <h3 id="h3-title"> Create & Share Markdown Wikis</h3>
+    <p><center><%= link_to "Sign Up", new_user_registration_path %></p>
+  </div>
+</div>
