--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,16 +3,25 @@
 <head>
   <title>Blocipedia</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
+  <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 </head>
 <body>
   <div class="container">
     <ul class="nav nav-tabs">
-      <li><%= link_to "Home", welcome_index_path %></li>
+      <li><%= link_to "Home", root_path %></li>
       <li><%= link_to "About", welcome_about_path %></li>
+      <% if user_signed_in? %>
+        <li class="nav nav-tabs navbar-right"><%= link_to 'Sign Out', destroy_user_session_path, method: :delete %></li>
+        <li class="nav nav-tabs navbar-right"><%= link_to 'Edit Profile', edit_user_registration_path %></li>
+        <li class="nav nav-tabs navbar-right">Signed in as <%= current_user.username %> </li>
+      <% else %>
+        <li class="nav nav-tabs navbar-right"><%= link_to "Sign In", new_user_session_path %></li>
+      <% end %>
     </ul>
+  </div>
+
 
 <%= yield %>
 
