--- a/app/views/users/mailer/confirmation_instructions.html.erb
+++ b/app/views/users/mailer/confirmation_instructions.html.erb
@@ -1,4 +1,4 @@
-<p>Welcome to Blocipedia, <%= @current_user.name %>!</p>
+<p>Welcome to Blocipedia, <%= @current_user.email %> </p>
 
 <p>Please confirm your account through the link below:</p>
 
