--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,16 +13,21 @@
       <li><%= link_to "Home", root_path %></li>
       <li><%= link_to "About", welcome_about_path %></li>
       <% if user_signed_in? %>
-        <li class="nav nav-tabs navbar-right"><%= link_to 'Sign Out', destroy_user_session_path, method: :delete %></li>
+        <li class="nav nav-tabs navbar-right"><%= link_to 'Logout', destroy_user_session_path, method: :delete %></li>
         <li class="nav nav-tabs navbar-right"><%= link_to 'Edit Profile', edit_user_registration_path %></li>
-        <li class="nav nav-tabs navbar-right">Signed in as <%= current_user.username %> </li>
+        <li class="nav nav-tabs navbar-right">Signed in as <%= current_user.email %> </li>
       <% else %>
         <li class="nav nav-tabs navbar-right"><%= link_to "Sign In", new_user_session_path %></li>
       <% end %>
     </ul>
   </div>
 
-
+  <% if notice %>
+    <p class="alert alert-success"><%= notice %></p>
+  <% end %>
+  <% if alert %>
+    <p class="alert alert-danger"><%= alert %></p>
+  <% end %>
 <%= yield %>
 
 </body>
