--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -1,15 +1,17 @@
+<div class="formwrapper">
+  <center>
 <h2>Sign up</h2>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= devise_error_messages! %>
   <div class="field">
-    <%= f.label :name %><br />
-    <%= f.name_field :name, autofocus: true %>
+    <%= f.label :username %><br />
+    <%= f.text_field :username, autofocus: true %>
   </div>
 
   <div class="field">
     <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true %>
+    <%= f.email_field :email %>
   </div>
 
   <div class="field">
@@ -30,4 +32,6 @@
   </div>
 <% end %>
 
-<%= render "users/shared/links" %>
+Already a member? <%= render "users/shared/links" %>
+  </center>
+</div>
