--- a/app/views/devise/mailer/confirmation_instructions.html.erb
+++ b/app/views/devise/mailer/confirmation_instructions.html.erb
@@ -1,4 +1,4 @@
-<p>Welcome to Blocipedia, <%= @username %>!</p>
+<p>Welcome to Blocipedia, <%= @email %>! </p>
 
 <p>Please confirm your account through the link below:</p>
 
