User Story 3 - In Progress

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,7 @@
     <ul class="nav nav-tabs">
       <li><%= link_to "Home", root_path %></li>
       <li><%= link_to "About", welcome_about_path %></li>
+      <li><%= link_to "Wikis", authenticated_root_path %></li>
       <% if user_signed_in? %>
         <li class="nav nav-tabs navbar-right"><%= link_to 'Logout', destroy_user_session_path, method: :delete %></li>
         <li class="nav nav-tabs navbar-right"><%= link_to 'Edit Profile', edit_user_registration_path %></li>
