--- a/app/views/wikis/show.html.erb
+++ b/app/views/wikis/show.html.erb
@@ -1,14 +1,14 @@
 <h1>
-  <%= @title %></h1>
+  <%= @wiki.title %></h1>
 
 <div class="row">
   <div class="col-md-4">
-    <p><%= @body %></p>
+    <p><%= @wiki.body %></p>
   </div>
   <% if user_signed_in? %>
     <%= link_to "Delete Post", @wiki, method: :delete, class: 'btn btn-danger', data: { confirm: 'Are you sure you want to delete this wiki?' } %>
+    <%= link_to "Edit Post", edit_wiki_path(@wiki) %>
   </div>
   <% end %>
 
-  render :
 </div>
