--- a/app/views/wikis/new.html.erb
+++ b/app/views/wikis/new.html.erb
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col-md-8">
 
-<%= form_for @wiki do |f| %>
+<%= form_for [current_user, @wiki] do |f| %>
 <div class="field">
   <%= f.label :title %>
   <%= f.text_field :title %>
