--- a/app/views/wikis/show.html.erb
+++ b/app/views/wikis/show.html.erb
@@ -6,8 +6,8 @@
     <p><%= @wiki.body %></p>
   </div>
   <% if user_signed_in? %>
-    <%= link_to "Delete Post", @wiki, method: :delete, class: 'btn btn-danger', data: { confirm: 'Are you sure you want to delete this wiki?' } %>
-    <%= link_to "Edit Post", edit_wiki_path(@wiki) %>
+    <%= link_to "Delete Wiki", [@wiki.user, @wiki], method: :delete, class: 'btn btn-danger', data: { confirm: 'Are you sure you want to delete this wiki?' } %>
+    <%= link_to "Edit Wiki", edit_user_wiki_path(current_user, @wiki) %>
   </div>
   <% end %>
 
