--- a/app/views/wikis/show.html.erb
+++ b/app/views/wikis/show.html.erb
@@ -5,7 +5,7 @@
   <div class="col-md-4">
     <p><%= @wiki.body %></p>
   </div>
-  <% if user_signed_in? %>
+  <% if current_user || user.admin? %>
     <%= link_to "Delete Post", @wiki, method: :delete, class: 'btn btn-danger', data: { confirm: 'Are you sure you want to delete this wiki?' } %>
     <%= link_to "Edit Post", edit_wiki_path(@wiki) %>
   </div>
