--- a/app/views/wikis/show.html.erb
+++ b/app/views/wikis/show.html.erb
@@ -5,10 +5,10 @@
   <div class="col-md-4">
     <p><%= @wiki.body %></p>
   </div>
-  <% if current_user || user.admin? %>
+  <% if policy(@wiki).destroy? %>
     <%= link_to "Delete Post", @wiki, method: :delete, class: 'btn btn-danger', data: { confirm: 'Are you sure you want to delete this wiki?' } %>
+  <% end %>
     <%= link_to "Edit Post", edit_wiki_path(@wiki) %>
   </div>
-  <% end %>
 
 </div>
