--- a/app/views/devise/mailer/confirmation_instructions.html.erb
+++ b/app/views/devise/mailer/confirmation_instructions.html.erb
@@ -1,5 +1,5 @@
 <p>Welcome to Blocipedia, <%= @email %>! </p>
 
-<p>Please confirm your account through the link below:</p>
+<p>Click the link below to confirm your account and get started:</p>
 
 <p><%= link_to 'Confirm my account', confirmation_url(@resource, confirmation_token: @token) %></p>
