--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,38 +1,28 @@
-<div class="formwrapper">
-  <center>
-<h2>Sign Up</h2>
+<div class="container container-table">
+<div class="row vertical-center-row">
+  <div class="text-center col-md-4 col-md-offset-4">
+<h2>Sign Up</h2><br>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= devise_error_messages! %>
 
-  <div class="field">
-    <%= f.label :username %><br />
-    <%= f.text_field :username %>
+  <div class="field" "account-wall">
+    <%= f.text_field :username, :autofocus => true, :placeholder => 'Username' %><br /><br>
+    <%= f.email_field :email, :placeholder => 'Email address' %><br /><br>
+    <%= f.password_field :password, autocomplete: "off", :placeholder => 'Password' %>
+      <p class="text-muted"><em>(min. 8 characters)</em></p>
+    <%= f.password_field :password_confirmation, autocomplete: "off", :placeholder => 'Confirm password' %><br /><br>
   </div>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email %>
-  </div>
 
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "off" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %>
-  </div>
-
+  <br>
   <div class="actions">
-    <%= f.submit "Sign up" %>
+    <%= f.submit "Sign up", class: 'btn btn-primary'%>
   </div>
 <% end %>
+  <br>
 
 Already a member? <%= render "devise/shared/links" %>
-</center>
+</div>
+</div>
 </div>
