--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -5,4 +5,16 @@
     <h3 id="h3-title"> Create & Share Markdown Wikis</h3>
     <p><center><%= link_to "Sign Up", new_user_registration_path %></p>
   </div>
+
+  <div class="row">
+    <div class="col-md-6">
+      <h3>Standard Account</h3>
+      <p><%= link_to "Sign Up", new_user_registration_path %></p>
+    </div>
+    <div class="col-md-6">
+      <h3>Premium Account</h3>
+      <small><p>Just $14.99!</p></small>
+      <p><%= link_to "Sign Up", new_user_registration_path %></p>
+    </div>
+  </div>
 </div>
