--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -28,7 +28,7 @@
   <p>Want to upgrade? <%= button_to "Upgrade to Premium", new_charge_path %> </p>
 <% end %>
 <% if current_user.premium? == true %>
-  <p>Downgrade my account <%= button_to "Downgrade to Standard", root_path %> </p>
+  <p>Downgrade my account <%= button_to "Downgrade to Standard", downgrade_path, method: :patch %> </p>
 <% end %>
 <p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
 
