--- a/app/views/wikis/new.html.erb
+++ b/app/views/wikis/new.html.erb
@@ -13,6 +13,9 @@
   <%= f.text_area :body %>
 </div>
 
+<div class="field">
+  <%= render :partial => 'form', :locals => {:f => f} %>
+</div>
   <%= f.submit "Save" %>
 <% end %>
 
