--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
       <li><%= link_to "Wikis", authenticated_root_path %></li>
       <% if user_signed_in? %>
         <% if current_user.standard? == true %>
-        <li class="nav nav-tabs navbar-right"><%= link_to 'Upgrade Now', new_charge_path %></li>
+        <li class="nav nav-tabs navbar-right"><%= link_to 'Upgrade Now', new_subscriber_path %></li>
         <% end %>
         <li class="nav nav-tabs navbar-right"><%= link_to 'Logout', destroy_user_session_path, method: :delete %></li>
         <li class="nav nav-tabs navbar-right"><%= link_to 'Edit Profile', edit_user_registration_path %></li>
