--- a/app/views/wikis/index.html.erb
+++ b/app/views/wikis/index.html.erb
@@ -2,13 +2,16 @@
   <h2>Wikis</h2>
 
   <div class="row">
-    <div class="col-md-8">
       <% @wikis.each do |wiki| %>
         <table class="table table-hover">
           <tbody>
             <tr>
+              <div class="col-md-4">
               <td><%= link_to wiki.title, wiki_path(wiki)  %></td>
+              </div>
+              <div class="col-md-4">
               <td><%= wiki.body %></td>
+              </div>
             </tr>
           </tbody>
         </table>
