--- a/app/views/charges/downgrade.html.erb
+++ b/app/views/charges/downgrade.html.erb
@@ -1,2 +1,2 @@
-<!-- <h3>Your account has been changed to standard level</h3>
-<%= link_to "Home", root_path %> -->
+<h3>Your account has been changed to standard level</h3>
+<%= link_to "Home", root_path %>
