--- a/app/views/charges/new.html.erb
+++ b/app/views/charges/new.html.erb
@@ -1,4 +1,4 @@
-<!-- <%= form_tag charges_path do %>
+<%= form_tag charges_path do %>
 <article>
   <% if flash[:error].present? %>
     <div id="error_explantaion">
@@ -14,4 +14,4 @@
     data-key="<%= @stripe_btn_data[:key] %>"
     data-amount="<%= @stripe_btn_data[:amount] %>""
     data-description="<%= @stripe_btn_data[:description] %>"></script>
-<% end %> -->
+<% end %>
