--- a/app/views/wikis/edit.html.erb
+++ b/app/views/wikis/edit.html.erb
@@ -13,6 +13,13 @@
   <%= f.text_area :body %>
 </div>
 
+<div class="field">
+  <%= render :partial => 'form', :locals => {:f => f} %>
+</div>
+
+<%= render :partial => 'collaborators' %>
+
+<div class="form-group">
   <%= f.submit "Save" %>
 <% end %>
 
