Adding collaborators checkbox list

--- a/app/views/wikis/_collaborators.html.erb
+++ b/app/views/wikis/_collaborators.html.erb
@@ -2,7 +2,7 @@
             <div class="well" style="max-height: 300px;overflow: auto;">
               <% @users.each do |user| %>
         		<ul class="list-group checked-list-box">
-                  <li class="list-group-item"><%= user.email %> </li>
+                  <li class="list-group-item"><input type="checkbox" value=""><%= user.email %> </li>
                 </ul>
               <% end %>
             </div>
