--- a/app/views/wikis/_collaborators.html.erb
+++ b/app/views/wikis/_collaborators.html.erb
@@ -1,4 +1,4 @@
-<h3 class="text-center">Collaborators</h3>
+<p class="text-center">Collaborators</p>
             <div class="well" style="max-height: 300px;overflow: auto;">
               <% @users.each do |user| %>
         		<ul class="list-group checked-list-box">
