--- a/app/views/wikis/new.html.erb
+++ b/app/views/wikis/new.html.erb
@@ -16,6 +16,10 @@
 <div class="field">
   <%= render :partial => 'form', :locals => {:f => f} %>
 </div>
+
+<!-- <%= render :partial => 'collaborators', :locals => {:wiki => @wiki} %> -->
+
+<div class="form-group">
   <%= f.submit "Save" %>
 <% end %>
 
