--- a/app/views/wikis/edit.html.erb
+++ b/app/views/wikis/edit.html.erb
@@ -17,7 +17,17 @@
   <%= render :partial => 'form', :locals => {:f => f} %>
 </div>
 
-<%= render :partial => 'collaborators', :locals => {:wiki => @wiki} %>
+<p class="text-center">Collaborators</p>
+            <div class="well" style="max-height: 300px;overflow: auto;">
+              <% @users.each do |user| %>
+        		<ul class="list-group checked-list-box">
+                  <li class="list-group-item"><input type="checkbox" value=""><%= user.email %> </li>
+                </ul>
+              <% end %>
+            </div>
+        </div>
+
+<!-- <%= render :partial => 'collaborators', :locals => {:wiki => @wiki} %> -->
 
 <div class="form-group">
   <%= f.submit "Save" %>
