--- a/app/views/wikis/edit.html.erb
+++ b/app/views/wikis/edit.html.erb
@@ -1,6 +1,7 @@
+<div class="container">
 <h1>Edit Wiki</h1>
-  <div class="row">
-    <div class="col-md-4">
+  <div class="row row-centered">
+    <div class="col-md-4 col-centered">
 
 <%= form_for @wiki do |f| %>
 <div class="field">
@@ -13,8 +14,23 @@
   <%= f.text_area :body %>
 </div>
 
+<div class="field">
+  <%= render :partial => 'form', :locals => {:f => f} %>
+</div>
+
+<div class="col-md-8 col-centered">
+  <% @users.each do |user| %>
+    <%= check_box_tag "wiki[user_ids][]", user.id,
+      @wiki.users.include?(user), id: dom_id(user) %>
+    <%= label_tag dom_id(user), user.email %>
+  <% end %>
+</div>
+
+<div class="col-md-4 col-centered"
   <%= f.submit "Save" %>
 <% end %>
+</div>
 
+</div>
 </div>
 </div>
