--- a/app/views/wikis/edit.html.erb
+++ b/app/views/wikis/edit.html.erb
@@ -1,7 +1,8 @@
 <div class="container">
-<h1>Edit Wiki</h1>
   <div class="row row-centered">
-    <div class="col-md-4 col-centered">
+    <div class="col-md-6 col-md-offset-3">
+
+      <h1>Edit Wiki</h1>
 
 <%= form_for @wiki do |f| %>
 <div class="field">
@@ -18,7 +19,7 @@
   <%= render :partial => 'form', :locals => {:f => f} %>
 </div>
 
-<div class="col-md-8 col-centered">
+<div class="col-md-8 col-md-offset-2">
   <% @users.each do |user| %>
     <%= check_box_tag "wiki[user_ids][]", user.id,
       @wiki.users.include?(user), id: dom_id(user) %>
@@ -26,7 +27,7 @@
   <% end %>
 </div>
 
-<div class="col-md-4 col-centered"
+<div class="col-md-8 col-md-offset-2">
   <%= f.submit "Save" %>
 <% end %>
 </div>
