--- a/app/views/wikis/new.html.erb
+++ b/app/views/wikis/new.html.erb
@@ -1,6 +1,8 @@
+<div class="container">
+  <div class="row row-centered">
+    <div class="col-md-6 col-md-offset-3">
+
 <h1>New Wiki Submission</h1>
-  <div class="row">
-    <div class="col-md-8">
 
 <%= form_for @wiki do |f| %>
 <div class="field">
@@ -19,5 +21,6 @@
   <%= f.submit "Save" %>
 <% end %>
 
+</div>
 </div>
 </div>
