--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -9,10 +9,12 @@
   <div class="row">
     <div class="col-md-6">
       <h3>Standard Account</h3>
+      <p>Create & view public wikis</p>
       <p><%= link_to "Sign Up", new_user_registration_path %></p>
     </div>
     <div class="col-md-6">
       <h3>Premium Account</h3>
+      <p>Create, view, & collaborate on public and private wikis</p>
       <small><p>Just $14.99!</p></small>
       <p><%= link_to "Sign Up", new_user_registration_path %></p>
     </div>
