--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,8 +11,8 @@
   <div class="container">
     <ul class="nav nav-tabs">
       <li><%= link_to "Home", root_path %></li>
-      <li><%= link_to "About", welcome_about_path %></li>
-      <li><%= link_to "Wikis", authenticated_root_path %></li>
+      <!-- <li><%= link_to "About", welcome_about_path %></li> -->
+      <li><%= link_to "Wikis", wikis_path %></li>
       <% if user_signed_in? %>
         <% if current_user.standard? == true %>
         <li class="nav nav-tabs navbar-right"><%= link_to 'Upgrade Now', new_charge_path %></li>
