--- a/app/views/wikis/edit.html.erb
+++ b/app/views/wikis/edit.html.erb
@@ -19,6 +19,7 @@
   <%= render :partial => 'form', :locals => {:f => f} %>
 </div>
 
+  <% if current_user.admin? || current_user.premium? %>
 <div class="col-md-8 col-md-offset-2">
   <% @users.each do |user| %>
     <%= check_box_tag "wiki[user_ids][]", user.id,
@@ -26,6 +27,7 @@
     <%= label_tag dom_id(user), user.email %>
   <% end %>
 </div>
+<% end %>
 
 <div class="col-md-8 col-md-offset-2">
   <%= f.submit "Save" %>
