--- a/app/views/wikis/edit.html.erb
+++ b/app/views/wikis/edit.html.erb
@@ -1,40 +1,47 @@
 <div class="container">
-  <div class="row row-centered">
-    <div class="col-md-6 col-md-offset-3">
+  <div class="row">
+    <div class="col-md-6">
 
       <h1>Edit Wiki</h1>
 
-<%= form_for @wiki do |f| %>
-<div class="field">
-  <%= f.label :title %>
-  <%= f.text_field :title %>
-</div>
+      <%= form_for @wiki do |f| %>
+      <div class="field">
+        <%= f.label :title %>
+        <%= f.text_field :title %>
+      </div>
 
-<div class="field">
-  <%= f.label :body %>
-  <%= f.text_area :body %>
-</div>
+      <div class="field">
+        <%= f.label :body %>
+        <%= f.text_area :body, rows: 10, cols: 40 %>
+      </div>
 
-<div class="field">
-  <%= render :partial => 'form', :locals => {:f => f} %>
-</div>
+      <div class="field">
+        <%= render :partial => 'form', :locals => {:f => f} %>
+      </div>
 
-  <% if current_user.admin? || current_user.premium? %>
-<div class="col-md-8 col-md-offset-2">
-  <% @users.each do |user| %>
-    <%= check_box_tag "wiki[user_ids][]", user.id,
-      @wiki.users.include?(user), id: dom_id(user) %>
-    <%= label_tag dom_id(user), user.email %>
-  <% end %>
-</div>
-<% end %>
+      <% if current_user.admin? || current_user.premium? %>
+      <div class="col-md-8 col-md-offset-2">
+        <% @users.each do |user| %>
+        <%= check_box_tag "wiki[user_ids][]", user.id,
+        @wiki.users.include?(user), id: dom_id(user) %>
+        <%= label_tag dom_id(user), user.email %>
+        <% end %>
+      </div>
+      <% end %>
+    </div>
+    <div class="col-md-6">
+      <h3>Wiki preview</h3>
+      <div id="wiki_preview">
+
+      </div>
+    </div>
 
 
-<div class="col-md-8 col-md-offset-2">
-  <%= f.submit "Save" %>
-<% end %>
-</div>
+      <div class="col-md-8 col-md-offset-2">
+        <%= f.submit "Save" %>
+        <% end %>
+      </div>
 
-</div>
-</div>
+    </div>
+  </div>
 </div>
