--- a/app/views/wikis/new.html.erb
+++ b/app/views/wikis/new.html.erb
@@ -1,26 +1,42 @@
 <div class="container">
   <div class="row row-centered">
     <div class="col-md-6 col-md-offset-3">
+      <h1>New Wiki Submission</h1>
+    </br></br>
+        <%= form_for @wiki do |f| %>
+        <div class="field">
+          <%= f.label :title %></br>
+          <%= f.text_field :title %>
+        </div>
 
-<h1>New Wiki Submission</h1>
+        <div class="field">
+          <%= f.label :body %></br>
+          <%= f.text_area :body %>
+        </div>
 
-<%= form_for @wiki do |f| %>
-<div class="field">
-  <%= f.label :title %>
-  <%= f.text_field :title %>
-</div>
+        <% if current_user.admin? || current_user.premium? %>
+          <div class="form-group">
+            <%= f.label :private, class: 'checkbox' do %>
+            <%= f.check_box :private %> Private wiki
+            <% end %>
+          </div>
+        <% end %>
 
-<div class="field">
-  <%= f.label :body %>
-  <%= f.text_area :body %>
-</div>
+        <% if current_user.admin? || current_user.premium? %>
+        <div class="col-md-8 col-md-offset-2">
+        <% @users.each do |user| %>
+          <%= check_box_tag "wiki[user_ids][]", user.id,
+            @wiki.users.include?(user), id: dom_id(user) %>
+          <%= label_tag dom_id(user), user.email %>
+          </br>
+        <% end %>
+        </div>
+        <% end %>
 
-<div class="field">
-  <%= render :partial => 'form', :locals => {:f => f} %>
-</div>
-  <%= f.submit "Save" %>
-<% end %>
-
-</div>
-</div>
+        <div class="col-md-8 col-md-offset-2">
+          <%= f.submit "Save" %>
+        <% end %>
+        </div>
+    </div>
+  </div>
 </div>
