--- a/app/views/wikis/new.html.erb
+++ b/app/views/wikis/new.html.erb
@@ -34,7 +34,8 @@
         <% end %>
 
         <div class="col-md-8 col-md-offset-2">
-          <%= f.submit "Save" %>
+        </br>
+          <%= f.submit "Save", class: 'btn btn-success' %></br>
         <% end %>
         </div>
     </div>
