--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,5 +14,21 @@
  *= require_self
  */
 
+ @import "bootswatch/paper/variables";
  @import "bootstrap-sprockets";
  @import "bootstrap";
+ @import "bootswatch/paper/bootswatch";
+
+ .center {
+     margin: auto;
+     width: 60%;
+     border: 3px solid #73AD21;
+     padding: 10px;
+ }
+
+#wiki {
+  text-align: center;
+  border: solid;
+  border-width: 2px;
+  text: black;
+}
