--- a/app/views/devise/mailer/unlock_instructions.html.erb
+++ b/app/views/devise/mailer/unlock_instructions.html.erb
@@ -1,6 +1,6 @@
-<p>Hello <%= @resource.email %>!</p>
+<p>Uh Oh!</p>
 
-<p>Your account has been locked from too many unsuccessful sign in attempts!</p>
+<p>Your account has been locked from too many unsuccessful sign in attempts.</p>
 
 <p>Click the link below to unlock your account:</p>
 
