--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,22 +1,22 @@
 <div class="container">
   <div class="jumbotron">
-    <h1 id="header-title">Blocipedia</h1>
+    <h1 id="header-title"><u>Blocipedia</u></h1>
 
-    <h3 id="h3-title"> Create & Share Markdown Wikis</h3>
-    <p><center><%= link_to "Sign Up", new_user_registration_path, class: 'btn btn-info' %></p>
+    <p id="h3-title"> Create & Share Markdown Wikis</p>
+    <p><center><%= link_to "Sign Up", new_user_registration_path, class: 'btn btn-primary' %></p>
   </div>
 
   <div class="row">
     <div class="col-md-6">
       <h3>Standard Account</h3>
       <p>Create & view public wikis</p>
-      <p><%= link_to "Sign Up", new_user_registration_path, class: 'btn btn-info' %></p>
+      <p><%= link_to "Sign Up", new_user_registration_path, class: 'btn btn-primary' %></p>
     </div>
     <div class="col-md-6">
       <h3>Premium Account</h3>
       <p>Create, view, & collaborate on public and private wikis</p>
       <small><p>Just $14.99!</p></small>
-      <p><%= link_to "Sign Up", new_user_registration_path, class: 'btn btn-info' %></p>
+      <p><%= link_to "Sign Up", new_user_registration_path, class: 'btn btn-primary' %></p>
     </div>
   </div>
 </div>
