--- a/app/views/wikis/edit.html.erb
+++ b/app/views/wikis/edit.html.erb
@@ -14,13 +14,17 @@
           <%= f.text_area :body %>
         </div>
 
+
         <% if current_user.admin? || current_user.premium? %>
+        <div class="col md-8 col-md-offset-2">
           <div class="form-group">
             <%= f.label :private, class: 'checkbox' do %>
             <%= f.check_box :private %> Private wiki
             <% end %>
+          </br>
           </div>
         <% end %>
+      </div>
 
         <% if current_user.admin? || current_user.premium? %>
         <div class="col-md-8 col-md-offset-2">
@@ -32,9 +36,12 @@
         <% end %>
         </div>
         <% end %>
+      </br>
 
         <div class="col-md-8 col-md-offset-2">
-          <%= f.submit "Save" %>
+        </br>
+          <%= f.submit "Save", class: 'btn btn-success'  %>
+        </br></br>
         <% end %>
         </div>
     </div>
