--- a/app/views/wikis/index.html.erb
+++ b/app/views/wikis/index.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="row">
-    <div class="col-md-6">
+    <div class="col-md-6 col-offset-4">
   <h2>Wikis</h2>
 
       <% @wikis.each do |wiki| %>
@@ -14,15 +14,12 @@
 
       <% end %>
     </div>
-  </div>
 
-  <div class="row">
-    <div class="col-md-6 col-offset-6">
+    <div class="col-md-4" id="center">
+    </br></br></br></br>
   <% if user_signed_in? %>
-  <div class="col-md-4">
     <%= link_to "New Wiki", new_wiki_path, class: 'btn btn-success' %>
   </div>
   <% end %>
-</div>
-</div>
+  </div>
 </div>
