--- a/app/views/wikis/show.html.erb
+++ b/app/views/wikis/show.html.erb
@@ -1,20 +1,15 @@
 <div class="container">
   <div class="row row-centered">
     <div class="col-md-6 col-md-offset-3">
-<h3><%= @wiki.title %></h3>
-</br>
-    <p><%= markdown(@wiki.body) %></p>
+      <h3><%= @wiki.title %></h3>
+        </br>
+        <p><%= markdown(@wiki.body) %></p>
 
-  </br></br>
-    <%= link_to "Edit Post", edit_wiki_path(@wiki), class: 'btn btn-success' %>
-</div>
-</div>
-  <div class="row row-centered">
-    <div class="col-md-6 col-md-offset-3">
-    </br>
-      <% if policy(@wiki).destroy? %>
-        <%= link_to "Delete Post", @wiki, method: :delete, class: 'btn btn-danger', data: { confirm: 'Are you sure you want to delete this wiki?' } %>
-      <% end %>
-</div>
-</div>
-</div>
+        </br></br>
+        <%= link_to "Edit Wiki", edit_wiki_path(@wiki), class: 'btn btn-success' %>
+        <% if policy(@wiki).destroy? %>
+          <%= link_to "Delete Wiki", @wiki, method: :delete, class: 'btn btn-danger', data: { confirm: 'Are you sure you want to delete this wiki?' } %>
+        <% end %>
+  </div>
+  </div>
+  </div>
