--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,11 +15,12 @@
       <li><%= link_to "Home", root_path %></li>
       <li><%= link_to "Wikis", wikis_path %></li>
     </ul>
+
     <ul class="nav navbar-nav navbar-right">
+      <% if user_signed_in? %>
         <li class="dropdown">
-          <% if user_signed_in? %>
           <class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">
-            Hello, <class="navbar-link"><%= current_user.email %>!<span class="caret"></span>
+            Hello, <%= current_user.email %>!<span class="caret"></span>
           <ul class="dropdown-menu" role="menu">
             <% if current_user.standard? == true %>
               <li><%= link_to 'Upgrade Now', new_charge_path %></li>
