--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,41 +9,48 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-  <nav class-"navbar navbar-default">
-  <div class="container">
-    <ul class="nav nav-tabs">
-      <li><%= link_to "Home", root_path %></li>
-      <li><%= link_to "Wikis", wikis_path %></li>
-    </ul>
-
+  <nav class="navbar navbar-default">
+  <div class="container-fluid">
+    <div class="navbar-header">
+       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
+          data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+         <span class="sr-only">Toggle navigation</span>
+         <span class="icon-bar"></span>
+         <span class="icon-bar"></span>
+         <span class="icon-bar"></span>
+       </button>
+       <a class="navbar-brand" href="/">Blocipedia</a>
+     </div>
+   <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+     <ul class="nav navbar-nav">
+      <li class="active"><a href="/">Home <span class="sr-only">(current)</span></a></li>
+      <li><a href="/wikis">Wikis</a></li>
+     </ul>
     <ul class="nav navbar-nav navbar-right">
       <% if user_signed_in? %>
-        <li class="dropdown">
-          <class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">
-            Hello, <%= current_user.email %>!<span class="caret"></span>
-          <ul class="dropdown-menu" role="menu">
+      <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"
+            aria-haspopup="true" aria-expanded="false">Welcome <%= current_user.email %>! <span class="caret"></span></a>
+          <ul class="dropdown-menu">
             <% if current_user.standard? == true %>
-              <li><%= link_to 'Upgrade Now', new_charge_path %></li>
+            <li><a href="/charges/new">Upgrade Account</a></li>
             <% end %>
-            <li><%= link_to 'Edit Profile', edit_user_registration_path %></li>
-            <li><%= link_to 'Logout', destroy_user_session_path, method: :delete %></li>
+            <li><a href="/users/edit">Edit Profile</a></li>
+            <li><a href="/users/sign_out">Log Out</a></li>
           </ul>
         </li>
-      <% end %>
-      <% if user_signed_in? == false %>
-        <li><%= link_to "Sign In", new_user_session_path %></li>
-      <% end %>
+      <% else %>
+          <li><a href="/users/sign_in">Sign In</a></li>
+        <% end %>
       </ul>
     </div>
   </div>
-</nav>
+  </nav>
   <div id="flash">
       <% flash.each do |key, value| %>
         <div class="alert alert-<%= key %>"><%= value %></div>
       <% end %>
   </div>
-</nav>
-
 <%= yield %>
 
   </body>
