--- a/app/views/wikis/index.html.erb
+++ b/app/views/wikis/index.html.erb
@@ -1,7 +1,10 @@
 <div class="container">
   <div class="row">
     <div class="col-md-6 col-offset-4">
-  <h2>Wikis</h2>
+  <h2>Wikis
+    <% if user_signed_in? %>
+      <%= link_to "New Wiki", new_wiki_path, class: 'btn btn-primary' %>
+    <% end %></h2>
 
       <% @wikis.each do |wiki| %>
         <table class="table table-condensed">
@@ -14,12 +17,5 @@
 
       <% end %>
     </div>
-
-    <div class="col-md-4" id="center">
-    </br></br></br></br>
-  <% if user_signed_in? %>
-    <%= link_to "New Wiki", new_wiki_path, class: 'btn btn-success' %>
-  </div>
-  <% end %>
   </div>
 </div>
