--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,48 +9,10 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-  <nav class="navbar navbar-default">
-  <div class="container-fluid">
-    <div class="navbar-header">
-       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
-          data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-         <span class="sr-only">Toggle navigation</span>
-         <span class="icon-bar"></span>
-         <span class="icon-bar"></span>
-         <span class="icon-bar"></span>
-       </button>
-       <a class="navbar-brand" href="/">Blocipedia</a>
-     </div>
-   <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-     <ul class="nav navbar-nav">
-      <li class="active"><a href="/">Home <span class="sr-only">(current)</span></a></li>
-      <li><a href="/wikis">Wikis</a></li>
-     </ul>
-    <ul class="nav navbar-nav navbar-right">
-      <% if user_signed_in? %>
-      <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"
-            aria-haspopup="true" aria-expanded="false">Welcome <%= current_user.email %>! <span class="caret"></span></a>
-          <ul class="dropdown-menu">
-            <% if current_user.standard? == true %>
-            <li><a href="/charges/new">Upgrade Account</a></li>
-            <% end %>
-            <li><a href="/users/edit">Edit Profile</a></li>
-            <li><a href="/users/sign_out">Log Out</a></li>
-          </ul>
-        </li>
-      <% else %>
-          <li><a href="/users/sign_in">Sign In</a></li>
-        <% end %>
-      </ul>
-    </div>
-  </div>
-  </nav>
-  <div id="flash">
-      <% flash.each do |key, value| %>
-        <div class="alert alert-<%= key %>"><%= value %></div>
-      <% end %>
-  </div>
+
+   <%= render 'layouts/navbar' %>
+   <%= render 'layouts/flash' %>
+
 <%= yield %>
 
   </body>
